@@ -22,6 +22,9 @@ CXX = @CXX@
 CXXCPP = @CXXCPP0@
 CXXFLAGS = @CXXFLAGS@ $(LTO)
 CXXPICFLAGS = @CXXPICFLAGS@
+CXX11 = @CXX11@
+CXX11FLAGS = @CXX11FLAGS@
+CXX11PICFLAGS = @CXX11PICFLAGS@
 DYLIB_EXT = @DYLIB_EXT@
 DYLIB_LD = @DYLIB_LD@
 DYLIB_LDFLAGS = @DYLIB_LDFLAGS@@BUILD_LTO_TRUE@ $(CFLAGS) $(CPICFLAGS)
@@ -82,6 +85,8 @@ SHLIB_CFLAGS = @SHLIB_CFLAGS@
 SHLIB_CXXFLAGS = @SHLIB_CXXFLAGS@
 SHLIB_CXXLD = @SHLIB_CXXLD@
 SHLIB_CXXLDFLAGS = @SHLIB_CXXLDFLAGS@
+SHLIB_CXX11LD = @SHLIB_CXX11LD@
+SHLIB_CXX11LDFLAGS = @SHLIB_CXX11LDFLAGS@
 SHLIB_EXT = @SHLIB_EXT@
 SHLIB_FCLD = @SHLIB_FCLD@
 SHLIB_FCLDFLAGS = @SHLIB_FCLDFLAGS@
